--- a/index.html
+++ b/index.html
@@ -67,12 +67,13 @@
 
 	<section id="banner" >
 		<section class="container">
-			<a class="slidedown wow animated zoomIn" data-wow-delay="2s" href="#testimonial2"><i class="ion-ios-download-outline"></i></a>
+			<a class="slidedown wow animated zoomIn" data-wow-delay="1s" href="#testimonial2"><i class="ion-ios-download-outline"></i></a>
 			<section class="row">
+
 				<div class="col-md-6">
-					<div class="headings">
-						<h1 class="wow animated fadeInDown"><font size="60"><b>En iyi gezdiren uygulama!</b></font></h1>
-						<p class="wow animated fadeInLeft"><font size="40">App Store'da!</font></p>
+					<div class="headings h3">
+						<h1 class="wow animated fadeInDown"><font size="8"><b>En iyi gezdiren uygulama!</b></font></h1>
+						<p class="wow animated fadeInLeft"><font size="5">Lokasyon bazlý, ilgi alanlarýna göre kategorize edilmiþ, anlýk video içerikli <b>'Sosyal Rehber'</b></></p>
 						<div class="row">
 														<div class="col-xs-6 col-sm-6 col-md-5 hidden">
 								<div>
@@ -82,17 +83,17 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-md-6 hidden-xs hidden-sm">
-					<div class="hand-container">
-					<img class="iphone-hand img_res wow animated bounceInUp" data-wow-duration="1.2s" src="assets/img/iphone_hand.png"></img>
-					<div class="clearfix"></div>
-					</div>
-				</div>
+<!--				<div class="col-md-6 hidden-xs hidden-sm">-->
+<!--					<div class="hand-container">-->
+<!--					<img class="iphone-hand img_res wow animated bounceInUp" data-wow-duration="1.2s" src="assets/img/iphone_hand.png"></img>-->
+<!--					<div class="clearfix"></div>-->
+<!--					</div>-->
+<!--				</div>-->
 			</section>
 		</section>
 	</section>
 
-<!-- ****************************** testimonal-2************************** -->
+<!-- ****************************** MOTTOS ************************** -->
 
 <section id="testimonial2" class="block">
 		<section class="container">
@@ -100,7 +101,7 @@
 				<div class="title-box"><h1 class="block-title wow animated rollIn">
 				<span class="bb-top-left"></span>
 				<span class="bb-bottom-left"></span>
-				Aný Yakala!
+				Mottolarýmýz
 				<span class="bb-top-right"></span>
 				<span class="bb-bottom-right"></span>
 				</h1></div>
@@ -108,25 +109,92 @@
 		</section>
 		<section class="container">
 			<section class="row">
-				<section class="col-xs-12">
-											<div class="item">
-							<div class="row">
-								<div class="col-sm-4 col-sm-offset-1">
-									<div class="client-pic"><img class="img_res" src="assets/img/screenshot-2.png"></div>
-																	</div>
-								<div class="col-sm-6">
-									<p class="review-desc">
+<!--				<section class="col-xs-12">-->
 
-	Videonu Çek<br> Bulunduðun Mekanla Eþleþtir<br> Kategorini Seç<br> Yanýndakileri Etiketle<br> Videonu Paylaþ
-									</p>
-																	</div>
+					<!-- Slideshow container -->
+					<div class="slideshow-container">
 
-						</div>
-																	</div>
+					  <!-- Full-width images with number and caption text -->
+					  <div class="mottoslide">
+						  <img src="assets/img/mottos/motto1.jpg" style="width:100%">
+					  </div>
+
+					  <div class="mottoslide">
+						  <img src="assets/img/mottos/motto2.jpg" style="width:100%">
+					  </div>
+
+					  <div class="mottoslide">
+						  <img src="assets/img/mottos/motto3.jpg" style="width:100%">
+					  </div>
+
+					  <div class="mottoslide">
+						  <img src="assets/img/mottos/motto4.jpg" style="width:100%">
+					  </div>
+
+						<div class="mottoslide">
+						  <img src="assets/img/mottos/motto5.jpg" style="width:100%">
+					  </div>
+
+						<div class="mottoslide">
+						  <img src="assets/img/mottos/motto6.jpg" style="width:100%">
+					  </div>
+						<div class="mottoslide">
+						  <img src="assets/img/mottos/motto7.jpg" style="width:100%">
+					  </div>
+						<div class="mottoslide">
+						  <img src="assets/img/mottos/motto8.jpg" style="width:100%">
+					  </div>
+<!--						<div class="mottoslide">-->
+<!--						  <img src="assets/img/mottos/motto9.jpg" style="width:100%">-->
+<!--					  </div>-->
+						<div class="mottoslide">
+						  <img src="assets/img/mottos/motto10.jpg" style="width:100%">
+					  </div>
+						<div class="mottoslide">
+						  <img src="assets/img/mottos/motto11.jpg" style="width:100%">
+					  </div>
+						<div class="mottoslide">
+						  <img src="assets/img/mottos/motto12.jpg" style="width:100%">
+					  </div>
+						<div class="mottoslide">
+						  <img src="assets/img/mottos/motto13.jpg" style="width:100%">
+					  </div>
+						<div class="mottoslide">
+						  <img src="assets/img/mottos/motto14.jpg" style="width:100%">
+					  </div>
+
+					  <!-- Next and previous buttons -->
+					  <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+					  <a class="next" onclick="plusSlides(1)">&#10095;</a>
+					</div>
+					<br>
+
+
+					<!-- The dots/circles -->
+					<div style="text-align:center">
+					  <span class="dot" onclick="currentSlide(1)"></span>
+					  <span class="dot" onclick="currentSlide(2)"></span>
+					  <span class="dot" onclick="currentSlide(3)"></span>
+					  <span class="dot" onclick="currentSlide(4)"></span>
+					  <span class="dot" onclick="currentSlide(5)"></span>
+					  <span class="dot" onclick="currentSlide(6)"></span>
+					  <span class="dot" onclick="currentSlide(7)"></span>
+					  <span class="dot" onclick="currentSlide(8)"></span>
+<!--					  <span class="dot" onclick="currentSlide(9)"></span>-->
+					  <span class="dot" onclick="currentSlide(10)"></span>
+					  <span class="dot" onclick="currentSlide(11)"></span>
+						<span class="dot" onclick="currentSlide(12)"></span>
+						<span class="dot" onclick="currentSlide(13)"></span>
+						<span class="dot" onclick="currentSlide(14)"></span>
+					</div>
 				</section>
 			</section>
 		</section>
 	</section>
+
+
+
+
 <!-- ****************************** Team Section ************************** -->
 
 	<section id="team" class="block">
@@ -137,7 +205,7 @@
 						<h1 class="block-title wow animated rollIn">
 							<span class="bb-top-left1"></span>
 							<span class="bb-bottom-left1"></span><font color="#EB2B5D">
-							Kategoriler</font>
+							Ekip</font>
 							<span class="bb-top-right1"></span>
 							<span class="bb-bottom-right1"></span>
 						</h1>
@@ -145,67 +213,24 @@
 				</div>
 			</section>
 			<section class="row">
-				<section class="col-md-3 col-sm-6">
-					<div class="team-member wow animated fadeIn" data-wow-delay=="0.3s">
-						<img src="assets/img/dinner.jpg" class="img_res1 team-pic">
-						<h2 class="wow animated fadeInDown" data-wow-delay=="0.7s"><font color="#EB2B5D">Yemek</font></h2>
+				<div class="col-xs-12">
+					<div id="teammembers" class="owl-carousel owl-theme"  >
+										  <div class="item"><img src="assets/img/team/kagan.png" class="img_res1 team-pic">
+						<h2 class="wow animated fadeInDown" data-wow-delay=="0.7s"><font color="#EB2B5D">Kaðan Cenan</font></h2>
 																</div>
-				</section>
-				<section class="col-md-3 col-sm-6">
-					<div class="team-member wow animated fadeIn" data-wow-delay=="0.3s">
-						<img src="assets/img/fun.jpg" class="img_res1 team-pic">
-						<h2 class="wow animated fadeInDown" data-wow-delay=="0.7s"><font color="#EB2B5D">Eðlence</font></h2>
-
-											</div>
-				</section>
-				<section class="col-md-3 col-sm-6">
-					<div class="team-member wow animated fadeIn" data-wow-delay=="0.3s">
-						<img src="assets/img/guzellik.jpg" class="img_res1 team-pic">
-						<h2 class="wow animated fadeInDown" data-wow-delay=="0.7s"><font color="#EB2B5D">Güzellik</font></h2>
-
-											</div>
-				</section>
-				<section class="col-md-3 col-sm-6">
-					<div class="team-member wow animated fadeIn" data-wow-delay=="0.3s">
-						<img src="assets/img/map.jpg" class="img_res1 team-pic">
-						<h2 class="wow animated fadeInDown" data-wow-delay=="0.7s"><font color="#EB2B5D">Gezi</font></h2>
-
-											</div>
-				</section>
-			</section>
-<section class="row">
-				<section class="col-md-3 col-sm-6">
-					<div class="team-member wow animated fadeIn" data-wow-delay=="0.3s">
-						<img src="assets/img/moda.jpg" class="img_res1 team-pic">
-						<h2 class="wow animated fadeInDown" data-wow-delay=="0.7s"><font color="#EB2B5D">Moda</font></h2>
-
-											</div>
-				</section>
-				<section class="col-md-3 col-sm-6">
-					<div class="team-member wow animated fadeIn" data-wow-delay=="0.3s">
-						<img src="assets/img/kampus.jpg" class="img_res1 team-pic">
-						<h2 class="wow animated fadeInDown" data-wow-delay=="0.7s"><font color="#EB2B5D">Kampüs</font></h2>
-
-											</div>
-				</section>
-				<section class="col-md-3 col-sm-6">
-					<div class="team-member wow animated fadeIn" data-wow-delay=="0.3s">
-						<img src="assets/img/gym.jpg" class="img_res1 team-pic">
-						<h2 class="wow animated fadeInDown" data-wow-delay=="0.7s"><font color="#EB2B5D">Spor</font></h2>
-
-											</div>
-				</section>
-				<section class="col-md-3 col-sm-6">
-					<div class="team-member wow animated fadeIn" data-wow-delay=="0.3s">
-						<img src="assets/img/etkinlik.jpg" class="img_res1 team-pic">
-						<h2 class="wow animated fadeInDown" data-wow-delay=="0.7s"><font color="#EB2B5D">Etkinlik</font></h2>
-
-											</div>
-				</section>
+	<div class="item"></div>
+					  <div class="item"><img src="assets/img/team/alimert.png" class="img_res1 team-pic">
+						<h2 class="wow animated fadeInDown" data-wow-delay=="0.7s"><font color="#EB2B5D">Ali Mert Türker</font></h2>
+																</div>
+		<div class="item"></div>
+					  <div class="item"><img src="assets/img/team/memo.png" class="img_res1 team-pic">
+						<h2 class="wow animated fadeInDown" data-wow-delay=="0.7s"><font color="#EB2B5D">Mehmet Çaðatay Barýn</font></h2>
+																</div>
 			</section>
 
-		</section>
 	</section>
+
+
 
 
 <!-- ****************************** Testimonial ************************** -->
@@ -244,9 +269,11 @@
 	</section>
 
 
+
+
 	<!-- ****************************** Gallery Section ************************** -->
 
-	<section id="gallery" class="block">
+		<section id="gallery" class="block">
 		<section class="container">
 			<section class="row">
 				<div class="title-box" style="color:#fff;"><h1 class="block-title wow animated rollIn">
@@ -262,11 +289,11 @@
 			<section class="row">
 				<div class="col-xs-12">
 					<div id="screenshots" class="owl-carousel owl-theme"  >
-										  <div class="item"><img src="assets/img/screenshot-1.png" class="img_res wow animated zoomIn"></div>
+										  <div class="item"><img src="assets/img/screens/ss5.png" class="img_res wow animated zoomIn"></div>
 <div class="item"></div>
-					  <div class="item"><img src="assets/img/screenshot-2.png" class="img_res wow animated zoomIn"></div>
+					  <div class="item"><img src="assets/img/screens/ss3.png" class="img_res wow animated zoomIn"></div>
 	<div class="item"></div>
-					  <div class="item"><img src="assets/img/screenshot-3.png" class="img_res wow animated zoomIn"></div>
+					  <div class="item"><img src="assets/img/screens/ss4.png" class="img_res wow animated zoomIn"></div>
 									 				</div>
 			</section>
 		</section>
@@ -303,9 +330,8 @@
 				<div class="container">
 					<div class="col-sm-12">
 						<ul class="address-list">
-							<li><i class="ion-social-facebook" style="background-color:#3b5999;"></i> <span>Molocate</span></li>
-
-<a href="https://www.instagram.com/molocateapp/"><li><i class="ion-social-instagram" style="background-color:#cfbd8f" ></i> <span>molocateapp </span></li></a>
+							<a href="https://www.facebook.com/molocateapp/"><li><i class="ion-social-facebook" style="background-color:#3b5999;"></i> <span>molocateapp </span></li></a>
+							<a href="https://www.instagram.com/molocateapp/"><li><i class="ion-social-instagram" style="background-color:#cfbd8f" ></i> <span>molocateapp </span></li></a>
 							<a href="https://www.molocate.com/"><li><i class="ion-earth" style="background-color: #ff6969;"></i> <span>molocate.com</span></li></a>
 						</ul>
 					</div>
@@ -373,6 +399,8 @@
 	<script src="assets/js/wow.min.js"></script>
 	<script src="assets/js/owl.carousel.js"></script>
 	<script src="assets/js/script.js"></script>
+
+
 
 </body>
 </html>
