--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>Molocate-En iyi gezdiren uygulama!</title>
 
 	<!-- meta -->
-	<meta charset="iso-8859-9">
+	<meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -43,13 +43,13 @@
 	    <ul class="sidebar-nav">
 		    <li><a href="#home">Molocate</a></li>
 
-			<li><a href="#testimonial2">Anı Yakala!</a></li>
+			<li><a href="#testimonial2">AnÃ½ Yakala!</a></li>
 	<li><a href="#team">Kategoriler</a></li>
-	<li><a href="#testimonial">Keşfet!</a></li>
+	<li><a href="#testimonial">KeÃ¾fet!</a></li>
 <li><a href="#gallery">Galeri</a></li>
 
 
-			<li><a href="#contact">Bize Katıl!</a></li>
+			<li><a href="#contact">Bize KatÃ½l!</a></li>
 	    </ul>
 	</nav>
 
@@ -75,7 +75,7 @@
 				<div class="col-md-6">
 					<div class="headings h3">
 						<h1 class="wow animated fadeInDown"><font size="8"><b>En iyi gezdiren uygulama!</b></font></h1>
-						<p class="wow animated fadeInLeft"><font size="5">Lokasyon bazlı, ilgi alanlarına göre kategorize edilmiş, anlık video içerikli <b>'Sosyal Rehber'</b></></p>
+						<p class="wow animated fadeInLeft"><font size="5">Lokasyon bazlÃ½, ilgi alanlarÃ½na gÃ¶re kategorize edilmiÃ¾, anlÃ½k video iÃ§erikli <b>'Sosyal Rehber'</b></></p>
 						<div class="row">
 														<div class="col-xs-6 col-sm-6 col-md-5 hidden">
 								<div>
@@ -103,7 +103,7 @@
 				<div class="title-box"><h1 class="block-title wow animated rollIn">
 				<span class="bb-top-left"></span>
 				<span class="bb-bottom-left"></span>
-				Mottolarımız
+				MottolarÃ½mÃ½z
 				<span class="bb-top-right"></span>
 				<span class="bb-bottom-right"></span>
 				</h1></div>
@@ -218,15 +218,15 @@
 				<div class="col-xs-12">
 					<div id="teammembers" class="owl-carousel owl-theme"  >
 										  <div class="item"><img src="assets/img/team/kagan.png" class="img_res1 team-pic">
-						<h2 class="wow animated fadeInDown" data-wow-delay=="0.7s"><font color="#EB2B5D">Kağan Cenan</font></h2>
+						<h2 class="wow animated fadeInDown" data-wow-delay=="0.7s"><font color="#EB2B5D">KaÃ°an Cenan</font></h2>
 																</div>
 	<div class="item"></div>
 					  <div class="item"><img src="assets/img/team/alimert.png" class="img_res1 team-pic">
-						<h2 class="wow animated fadeInDown" data-wow-delay=="0.7s"><font color="#EB2B5D">Ali Mert Türker</font></h2>
+						<h2 class="wow animated fadeInDown" data-wow-delay=="0.7s"><font color="#EB2B5D">Ali Mert TÃ¼rker</font></h2>
 																</div>
 		<div class="item"></div>
 					  <div class="item"><img src="assets/img/team/memo.png" class="img_res1 team-pic">
-						<h2 class="wow animated fadeInDown" data-wow-delay=="0.7s"><font color="#EB2B5D">Mehmet Çağatay Barın</font></h2>
+						<h2 class="wow animated fadeInDown" data-wow-delay=="0.7s"><font color="#EB2B5D">Mehmet Ã‡aÃ°atay BarÃ½n</font></h2>
 																</div>
 			</section>
 
@@ -243,7 +243,7 @@
 				<div class="title-box"><h1 class="block-title wow animated rollIn">
 				<span class="bb-top-left"></span>
 				<span class="bb-bottom-left"></span>
-				Keşfet!
+				KeÃ¾fet!
 				<span class="bb-top-right"></span>
 				<span class="bb-bottom-right"></span>
 				</h1></div>
@@ -256,7 +256,7 @@
 							<div class="row">
 								<div class="col-sm-6">
 									<p class="review-desc">
-											Ne yapsam sorusuna cevap bul<br>Tüm mekanları anlık takip et<br>Saat saat mekanların ne kadar popüler olduğunu öğren<br>Kategorilere göre videoları filtrele									</p>
+											Ne yapsam sorusuna cevap bul<br>TÃ¼m mekanlarÃ½ anlÃ½k takip et<br>Saat saat mekanlarÃ½n ne kadar popÃ¼ler olduÃ°unu Ã¶Ã°ren<br>Kategorilere gÃ¶re videolarÃ½ filtrele									</p>
 																</div>
 
 								<div class="col-sm-4 col-sm-offset-1">
@@ -321,7 +321,7 @@
 					<span class="bb-bottom-left"></span>
 <font color="#fff">
 
-					Bize Katıl!
+					Bize KatÃ½l!
 </font>
 					<span class="bb-top-right"></span>
 					<span class="bb-bottom-right"></span>
@@ -346,22 +346,22 @@
 	                        <div class="row">
 	                            <div class="col-md-6">
 	                                <div class="form-group">
-	                                    <input type="text" class="form-control" placeholder="Adın *" id="name" required data-validation-required-message="Lütfen isminizi yazınız.">
+	                                    <input type="text" class="form-control" placeholder="AdÃ½n *" id="name" required data-validation-required-message="LÃ¼tfen isminizi yazÃ½nÃ½z.">
 	                                    <p class="help-block text-danger"></p>
 	                                </div>
 	                                <div class="form-group">
-	                                    <input type="email" class="form-control" placeholder=" Email *" id="email" required data-validation-required-message="Lütfen mail adresinizi yazınız.">
+	                                    <input type="email" class="form-control" placeholder=" Email *" id="email" required data-validation-required-message="LÃ¼tfen mail adresinizi yazÃ½nÃ½z.">
 	                                    <p class="help-block text-danger"></p>
 	                                </div>
 	                                <div class="form-group">
-	                                    <input type="text" class="form-control" placeholder=" Okulun *" id="phone" required data-validation-required-message="Lütfen mail adresinizi yazınız.">
+	                                    <input type="text" class="form-control" placeholder=" Okulun *" id="phone" required data-validation-required-message="LÃ¼tfen mail adresinizi yazÃ½nÃ½z.">
 	                                    <p class="help-block text-danger"></p>
 	                                </div>
 
 	                            </div>
 	                            <div class="col-md-6">
 	                                <div class="form-group">
-	                                    <textarea class="form-control" placeholder="Mesajın *" id="message" required data-validation-required-message="Lütfen mesajınızı yazınız"></textarea>
+	                                    <textarea class="form-control" placeholder="MesajÃ½n *" id="message" required data-validation-required-message="LÃ¼tfen mesajÃ½nÃ½zÃ½ yazÃ½nÃ½z"></textarea>
 	                                    <p class="help-block text-danger"></p>
 	                                    <div id="success"></div>
 		                                <button type="submit" class="polo-btn contact-submit"><i class="ion-paper-airplane"></i></button>
