--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 				<div class="col-md-6">
 					<div class="headings h3">
 						<h1 class="wow animated fadeInDown"><font size="8"><b>En iyi gezdiren uygulama!</b></font></h1>
-						<p class="wow animated fadeInLeft"><font size="5">Lokasyon bazlý, ilgi alanlarýna göre kategorize edilmiþ, anlýk video içerikli <b>'Sosyal Rehber'</b></></p>
+						<p class="wow animated fadeInLeft"><font size="5">Lokasyon bazlı, ilgi alanlarına göre kategorize edilmiş, anlık video içerikli <b>'Sosyal Rehber'</b></></p>
 						<div class="row">
 														<div class="col-xs-6 col-sm-6 col-md-5 hidden">
 								<div>
