Video and team section fix

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 		<li><a href="#team">Ekip</a></li>
 		<li><a href="#testimonial">Keşfet</a></li>
 		<li><a href="#gallery">Galeri</a></li>
+		<li><a href="#videos">Videolar</a></li>
 		<li><a href="#contact">Destekçilerimiz</a></li>
 
 
@@ -117,51 +118,51 @@
 
 				<!-- Full-width images with number and caption text -->
 				<div class="mottoslide">
-					<img src="https://molocate-public-static.s3.eu-central-1.amazonaws.com/img/mottos/motto1.jpg" style="width:100%">
+					<img src="assets/img/mottos/motto1.jpg" style="width:100%">
 				</div>
 
 				<div class="mottoslide">
-					<img src="https://molocate-public-static.s3.eu-central-1.amazonaws.com/img/mottos/motto2.jpg" style="width:100%">
+					<img src="assets/img/mottos/motto2.jpg" style="width:100%">
 				</div>
 
 				<div class="mottoslide">
-					<img src="https://molocate-public-static.s3.eu-central-1.amazonaws.com/img/mottos/motto3.jpg" style="width:100%">
+					<img src="assets/img/mottos/motto3.jpg" style="width:100%">
 				</div>
 
 				<div class="mottoslide">
-					<img src="https://molocate-public-static.s3.eu-central-1.amazonaws.com/img/mottos/motto4.jpg" style="width:100%">
+					<img src="assets/img/mottos/motto4.jpg" style="width:100%">
 				</div>
 
 				<div class="mottoslide">
-					<img src="https://molocate-public-static.s3.eu-central-1.amazonaws.com/img/mottos/motto5.jpg" style="width:100%">
+					<img src="assets/img/mottos/motto5.jpg" style="width:100%">
 				</div>
 
 				<div class="mottoslide">
-					<img src="https://molocate-public-static.s3.eu-central-1.amazonaws.com/img/mottos/motto6.jpg" style="width:100%">
+					<img src="assets/img/mottos/motto6.jpg" style="width:100%">
 				</div>
 				<div class="mottoslide">
-					<img src="https://molocate-public-static.s3.eu-central-1.amazonaws.com/img/mottos/motto7.jpg" style="width:100%">
+					<img src="assets/img/mottos/motto7.jpg" style="width:100%">
 				</div>
 				<div class="mottoslide">
-					<img src="https://molocate-public-static.s3.eu-central-1.amazonaws.com/img/mottos/motto8.jpg" style="width:100%">
+					<img src="assets/img/mottos/motto8.jpg" style="width:100%">
 				</div>
 				<!--						<div class="mottoslide">-->
 				<!--						  <img src="assets/img/mottos/motto9.jpg" style="width:100%">-->
 				<!--					  </div>-->
 				<div class="mottoslide">
-					<img src="https://molocate-public-static.s3.eu-central-1.amazonaws.com/img/mottos/motto10.jpg" style="width:100%">
+					<img src="assets/img/mottos/motto10.jpg" style="width:100%">
 				</div>
 				<div class="mottoslide">
-					<img src="https://molocate-public-static.s3.eu-central-1.amazonaws.com/img/mottos/motto11.jpg" style="width:100%">
+					<img src="assets/img/mottos/motto11.jpg" style="width:100%">
 				</div>
 				<div class="mottoslide">
-					<img src="https://molocate-public-static.s3.eu-central-1.amazonaws.com/img/mottos/motto12.jpg" style="width:100%">
+					<img src="assets/img/mottos/motto12.jpg" style="width:100%">
 				</div>
 				<div class="mottoslide">
-					<img src="https://molocate-public-static.s3.eu-central-1.amazonaws.com/img/mottos/motto13.jpg" style="width:100%">
+					<img src="assets/img/mottos/motto13.jpg" style="width:100%">
 				</div>
 				<div class="mottoslide">
-					<img src="https://molocate-public-static.s3.eu-central-1.amazonaws.com/img/mottos/motto14.jpg" style="width:100%">
+					<img src="assets/img/mottos/motto14.jpg" style="width:100%">
 				</div>
 
 				<!-- Next and previous buttons -->
@@ -182,11 +183,11 @@
 				<span class="dot" onclick="currentSlide(7)"></span>
 				<span class="dot" onclick="currentSlide(8)"></span>
 				<!--					  <span class="dot" onclick="currentSlide(9)"></span>-->
+				<span class="dot" onclick="currentSlide(9)"></span>
 				<span class="dot" onclick="currentSlide(10)"></span>
 				<span class="dot" onclick="currentSlide(11)"></span>
 				<span class="dot" onclick="currentSlide(12)"></span>
 				<span class="dot" onclick="currentSlide(13)"></span>
-				<span class="dot" onclick="currentSlide(14)"></span>
 			</div>
 		</section>
 	</section>
@@ -198,7 +199,7 @@
 
 <!-- ****************************** Team Section ************************** -->
 
-<section id="team" class="block">
+<section id="team" class="block" style="padding-bottom: 50px;">
 	<section class="container">
 		<section class="row">
 			<div class="col-md-12">
@@ -216,15 +217,15 @@
 		<section class="row">
 			<div class="col-xs-12">
 				<div id="teammembers" class="owl-carousel owl-theme"  >
-					<div class="item"><img src="assets/img/team/kagan.png" class="img_res1 team-pic">
+					<div class="item"><img src="assets/img/team/kagan_p.png" class="img_res1 team-pic">
 						<h2 class="wow animated fadeInDown" data-wow-delay=="0.7s"><font color="#EB2B5D">Kağan Cenan</font></h2>
 					</div>
 					<div class="item"></div>
-					<div class="item"><img src="assets/img/team/kagan.png" class="img_res1 team-pic">
+					<div class="item"><img src="assets/img/team/mert_p.png" class="img_res1 team-pic">
 						<h2 class="wow animated fadeInDown" data-wow-delay=="0.7s"><font color="#EB2B5D">Ali Mert Türker</font></h2>
 					</div>
 					<div class="item"></div>
-					<div class="item"><img src="assets/img/team/kagan.png" class="img_res1 team-pic">
+					<div class="item"><img src="assets/img/team/memo_p.png" class="img_res1 team-pic">
 						<h2 class="wow animated fadeInDown" data-wow-delay=="0.7s"><font color="#EB2B5D">Mehmet Çağatay Barın</font></h2>
 					</div>
 				</div>
@@ -250,7 +251,7 @@
 			</section>
 		</section>
 		<section class="container">
-			<section class="row">
+			<section class="row" style="padding-bottom: 50px;">
 				<section class="col-xs-12">
 					<div class="item">
 						<div class="row">
@@ -327,7 +328,7 @@
 
 					<!-- Full-width images with number and caption text -->
 					<div class="mottoslidevideo">
-						<video class="molocatevideo" poster="https://s3.eu-central-1.amazonaws.com/pipe.public.content/poster.png" width="500" height="300"  controlsList="nofullscreen nodownload" controls>
+						<video class="molocatevideo" poster="https://molocate-public-static.s3.eu-central-1.amazonaws.com/img/v1thumbnail.png" width="500" height="300"  controlsList="nofullscreen nodownload" controls>
 							<source src="https://molocate-public-static.s3.eu-central-1.amazonaws.com/img/videos/v1.mp4" type="video/mp4">
 						</video>
 					</div>
@@ -352,7 +353,25 @@
 
 					<div class="mottoslidevideo">
 						<video class="molocatevideo" width="500" height="300" controlsList="nofullscreen nodownload" controls>
-							<source src="https://molocate-public-static.s3.eu-central-1.amazonaws.com/img/videos/v6.mp4" type="video/mp4">
+							<source src="https://molocate-public-static.s3.eu-central-1.amazonaws.com/img/videos/v5_2.mp4" type="video/mp4">
+						</video>
+					</div>
+
+					<div class="mottoslidevideo">
+						<video class="molocatevideo" width="500" height="300" controlsList="nofullscreen nodownload" controls>
+							<source src="https://molocate-public-static.s3.eu-central-1.amazonaws.com/img/videos/v7_2.mp4" type="video/mp4">
+						</video>
+					</div>
+
+					<div class="mottoslidevideo">
+						<video class="molocatevideo" width="500" height="300" controlsList="nofullscreen nodownload" controls>
+							<source src="https://molocate-public-static.s3.eu-central-1.amazonaws.com/img/videos/v8_2.mp4" type="video/mp4">
+						</video>
+					</div>
+
+					<div class="mottoslidevideo">
+						<video class="molocatevideo" width="500" height="300" controlsList="nofullscreen nodownload" controls>
+							<source src="https://molocate-public-static.s3.eu-central-1.amazonaws.com/img/videos/v9_2.mp4" type="video/mp4">
 						</video>
 					</div>
 
@@ -370,6 +389,9 @@
 					<span class="dotvideo" onclick="currentVideoSlide(3)"></span>
 					<span class="dotvideo" onclick="currentVideoSlide(4)"></span>
 					<span class="dotvideo" onclick="currentVideoSlide(5)"></span>
+					<span class="dotvideo" onclick="currentVideoSlide(6)"></span>
+					<span class="dotvideo" onclick="currentVideoSlide(7)"></span>
+					<span class="dotvideo" onclick="currentVideoSlide(8)"></span>
 				</div>
 			</section>
 		</section>
@@ -397,12 +419,12 @@
 		<section class="supporters" style="height: 550px;">
 			<div class="container">
 				<section class="row" style="text-align: center;">
-					<img src="https://molocate-public-static.s3.eu-central-1.amazonaws.com/img/supporters/fbstarts2.png" style="padding-left: 54px; padding-right: 54px; padding-bottom: 54px;"/>
-					<img src="https://molocate-public-static.s3.eu-central-1.amazonaws.com/img/supporters/ibmdeveloper1.png" style="margin-left: 60px;"/>
+					<img src="assets/img/supporters/fbstarts2.png" style="padding-left: 54px; padding-right: 54px; padding-bottom: 54px;"/>
+					<img src="assets/img/supporters/ibmdeveloper1.png" style="margin-left: 60px;"/>
 				</section>
 				<section class="row" style="text-align: center;">
-					<img src="https://molocate-public-static.s3.eu-central-1.amazonaws.com/img/supporters/koc.png" style="width: 300px;"/>
-					<img src="https://molocate-public-static.s3.eu-central-1.amazonaws.com/img/supporters/kworks.png" style="width: 300px; margin-left: 60px;"/>
+					<img src="assets/img/supporters/koc.png" style="width: 300px;"/>
+					<img src="assets/img/supporters/kworks.png" style="width: 300px; margin-left: 60px;"/>
 				</section>
 			</div>
 		</section>
