Update to English

--- a/tr_index.html
+++ b/tr_index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Molocate-Feel your travel!</title>
+	<title>Molocate-En iyi gezdiren uygulama!</title>
 
 	<!-- meta -->
 	<meta charset="utf-8">
@@ -42,12 +42,12 @@
 	<a id="menu-close" href="#" class="close-btn toggle"><i class="ion-ios-close-empty"></i></a>
 	<ul class="sidebar-nav">
 		<li><a href="#home">Molocate</a></li>
-		<li><a href="#testimonial2">Mottos</a></li>
-		<li><a href="#team">Team</a></li>
-		<li><a href="#testimonial">Discover</a></li>
-		<li><a href="#gallery">Gallery</a></li>
-		<li><a href="#videos">Videos</a></li>
-		<li><a href="#contact">Supporters</a></li>
+		<li><a href="#testimonial2">Mottolarımız</a></li>
+		<li><a href="#team">Ekip</a></li>
+		<li><a href="#testimonial">Keşfet</a></li>
+		<li><a href="#gallery">Galeri</a></li>
+		<li><a href="#videos">Videolar</a></li>
+		<li><a href="#contact">Destekçilerimiz</a></li>
 
 
 	</ul>
@@ -74,8 +74,8 @@
 
 			<div class="col-md-6">
 				<div class="headings h3">
-					<h1 class="wow animated fadeInDown"><font size="8"><b>Best application to feel your travel!</b></font></h1>
-					<p class="wow animated fadeInLeft"><font size="5">Categorized, location based and instant <b>'Social Video Guide'</b></></p>
+					<h1 class="wow animated fadeInDown"><font size="8"><b>En iyi gezdiren uygulama!</b></font></h1>
+					<p class="wow animated fadeInLeft"><font size="5">Lokasyon bazlı, ilgi alanlarına göre kategorize edilmiş, anlık video içerikli <b>'Sosyal Rehber'</b></></p>
 					<div class="row">
 						<div class="col-xs-6 col-sm-6 col-md-5 hidden">
 							<div>
@@ -103,7 +103,7 @@
 			<div class="title-box"><h1 class="block-title wow animated rollIn">
 				<span class="bb-top-left"></span>
 				<span class="bb-bottom-left"></span>
-				MOTTOS
+				MOTTOLARIMIZ
 				<span class="bb-top-right"></span>
 				<span class="bb-bottom-right"></span>
 			</h1></div>
@@ -207,7 +207,7 @@
 					<h1 class="block-title wow animated rollIn">
 						<span class="bb-top-left1"></span>
 						<span class="bb-bottom-left1"></span><font color="#EB2B5D">
-						TEAM</font>
+						EKİP</font>
 						<span class="bb-top-right1"></span>
 						<span class="bb-bottom-right1"></span>
 					</h1>
@@ -244,7 +244,7 @@
 				<div class="title-box"><h1 class="block-title wow animated rollIn">
 					<span class="bb-top-left"></span>
 					<span class="bb-bottom-left"></span>
-					DISCOVER!
+					KEŞFET!
 					<span class="bb-top-right"></span>
 					<span class="bb-bottom-right"></span>
 				</h1></div>
@@ -257,8 +257,7 @@
 						<div class="row">
 							<div class="col-sm-6">
 								<p class="review-desc">
-									Find where you want to go<br>Discover new places<br>Keep pace with the spirit of the places instantly<br>Filter videos up to your interest
-								</p>
+									Ne yapsam sorusuna cevap bul<br>Tüm mekanları anlık takip et<br>Saat saat mekanların ne kadar popüler olduğunu öğren<br>Kategorilere göre videoları filtrele									</p>
 							</div>
 
 							<div class="col-sm-4 col-sm-offset-1">
@@ -285,7 +284,7 @@
 					<span class="bb-bottom-left" style="border-color: #fff; "></span>
 					<font color="#fff">
 
-						GALLERY</font>
+						GALERİ</font>
 					<span class="bb-top-right" style="border-color: #fff; "></span>
 					<span class="bb-bottom-right" style="border-color: #fff; "></span>
 				</h1></div>
@@ -313,7 +312,8 @@
 					<span class="bb-top-left" style="border-color: #fff;"></span>
 					<span class="bb-bottom-left" style="border-color: #fff;"></span>
 					<font color="#fff">
-						VIDEOS</font>
+
+						VİDEOLAR</font>
 					<span class="bb-top-right" style="border-color: #fff";></span>
 					<span class="bb-bottom-right" style="border-color: #fff;"></span>
 				</h1></div>
@@ -408,7 +408,8 @@
 					<span class="bb-top-left" style="border-color: #EB2B5D;"></span>
 					<span class="bb-bottom-left" style="border-color: #EB2B5D;"></span>
 					<font color="#EB2B5D">
-						SUPPORTERS
+
+						DESTEKÇİLERİMİZ
 					</font>
 					<span class="bb-top-right" style="border-color: #EB2B5D;"></span>
 					<span class="bb-bottom-right" style="border-color: #EB2B5D;"></span>
