--- a/tr_index.html
+++ b/tr_index.html
@@ -220,13 +220,14 @@
 					<div class="item"><img src="assets/img/team/kagan_p.png" class="img_res1 team-pic">
 						<h2 class="wow animated fadeInDown" data-wow-delay=="0.7s"><font color="#EB2B5D">Kağan Cenan</font></h2>
 					</div>
-					<div class="item"></div>
 					<div class="item"><img src="assets/img/team/mert_p.png" class="img_res1 team-pic">
 						<h2 class="wow animated fadeInDown" data-wow-delay=="0.7s"><font color="#EB2B5D">Ali Mert Türker</font></h2>
 					</div>
-					<div class="item"></div>
 					<div class="item"><img src="assets/img/team/memo_p.png" class="img_res1 team-pic">
 						<h2 class="wow animated fadeInDown" data-wow-delay=="0.7s"><font color="#EB2B5D">Mehmet Çağatay Barın</font></h2>
+					</div>
+					<div class="item"><img src="assets/img/team/akin.jpeg" class="img_res1 team-pic">
+						<h2 class="wow animated fadeInDown" data-wow-delay=="0.7s"><font color="#EB2B5D">Akın Can Saçak</font></h2>
 					</div>
 				</div>
 			</div>
